- Added JaCoCo for test coverage (sitting at ~86%) - Cleaned up logging with proper info/debug/error levels - Fixed that annoying immutable list bug in DataLoaderService - Wrote unit tests for every controller/service (32 total — all green) - Added Javadoc to all public classes - Tweaked logging config and generated Surefire + JaCoCo reports